--- a/src/main/UI/src/app/app.component.html
+++ b/src/main/UI/src/app/app.component.html
@@ -5,9 +5,18 @@
     <div class="hgroup">
       <h1>Landon Hotel</h1>
       <h2>London, Ontario</h2>
+<!--      from the video  TIMESTAMP 7:09-->
+       <div class=“scene" id="presentation">
+         <h1>{{announcePresentation$ | async}}</h1>
+       </div>
+       <div class=“scene" id="presentation2">
+         <h1>{{welcome}}</h1>
+       </div>
+       <div class=“scene" id="presentation3">
+         <h1>{{message2 | async}}</h1>
+       </div>
+
       <p><a href="/#welcome"><img src="assets/images/arrow.png" alt="down arrow"></a></p>
-
-
     </div>
   </article>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
